--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ DATABASE_URL='postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@127.0.0.1:5432/
 
 # CMS URL
 CMS_URL='http://localhost:5173'
+USER_URL='http://localhost:3030'
 
 POSTGRES_USER='postgres'
 POSTGRES_PASSWORD='dang04121999'
